--- a/css/styles.css
+++ b/css/styles.css
@@ -69,10 +69,12 @@ body {
   float: left;
 }
 .column-fileNav {
+  justify-content: center;
   width: 13.5%;
+  height: 13%;
   float: left;
-  margin-left: 2%;
-  margin-right: 1.5%;
+  margin-left: 1%;
+  margin-right: 3%;
 }
 .column-fileNav .link-nav {
   position: fixed;
@@ -88,15 +90,40 @@ body {
 .column-fileNav p:hover {
   cursor: pointer;
 }
+.column-fileNav button {
+  margin-top: 5%;
+  width: 100%;
+  height: 600%;
+  background: transparent;
+  border: none;
+  color: transparent;
+}
+.column-fileNav button:hover {
+  cursor: pointer;
+}
 #inicio {
   background-image: url("../img/inicio.png");
   background-size: cover;
   background-repeat: no-repeat;
-  margin: 0;
+  margin: 0%;
   height: 100vh;
 }
-#contents {
+#inicio h1,
+#inicio h2 {
+  margin-top: 0%;
+  margin-bottom: 0%;
   color: white;
+}
+#inicio h1 {
+  padding: 3%;
+}
+#inicio p {
+  color: white;
+  font-size: 150%;
+}
+#contents {
+  padding-top: 4%;
+  color: black;
 }
 .padding-cpt {
   padding-left: 5%;
@@ -117,6 +144,13 @@ body {
   align-items: center;
   /*alinear en horizontal*/
   justify-content: center;
+}
+a {
+  text-decoration: none;
+  color: white;
+}
+.row-fileNav {
+  height: 9%;
 }
 /* Otras clases */
 @media only screen and (max-width: 1250px) {
