--- a/css/styles.less
+++ b/css/styles.less
@@ -86,10 +86,12 @@ body{
 }
 
 .column-fileNav {
+    justify-content: center;
     width: 13.5%;
+    height: 13%;
     float: left;
-    margin-left: 2%;
-    margin-right: 1.5%;
+    margin-left: 1%;
+    margin-right: 3%;
     .link-nav {
         position: fixed;
         width: 13.5%;
@@ -105,18 +107,42 @@ body{
     p:hover {
         cursor: pointer;
     }
+    button {
+        margin-top: 5%;
+        width: 100%;
+        height: 600%;
+        background: transparent; 
+        border: none; 
+        color: transparent;
+    }
+    button:hover {
+        cursor: pointer;
+    }
 }
 
 #inicio{
     background-image:url("./../img/inicio.png");
     background-size: cover;
     background-repeat: no-repeat;
-    margin: 0;
+    margin: 0%;
     height: 100vh;
+    h1, h2 {
+        margin-top: 0%;
+        margin-bottom: 0%;
+        color: white;
+    }
+    h1 {
+        padding: 3%;
+    }
+    p {
+        color: white;
+        font-size: 150%;
+    }
 }
 
 #contents {
-    color: white;
+    padding-top: 4%;
+    color: black;
 }
 
 // #carpeta-sospechosos {
@@ -145,6 +171,15 @@ body{
     align-items: center;
     /*alinear en horizontal*/
     justify-content: center;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+.row-fileNav {
+    height: 9%;
 }
 
 /* Otras clases */
