--- a/css/styles.less
+++ b/css/styles.less
@@ -1,8 +1,257 @@
-html{
+html {
     font-size: 16px;
 }
-
 /* Redimensión de fuente utilizando rem */
+p {
+font-size: 1rem;
+}
+h1 {
+font-size: 3rem;
+}
+h2 {
+font-size: 2rem;
+}
+h3 {
+font-size: 1.6rem;
+}
+h4 {
+font-size: 1.3rem;
+}
+h5 {
+font-size: 1.15rem;
+}
+h6 {
+font-size: 1.05rem;
+}
+/**************************/
+/* clases predefinidas */
+* {
+box-sizing: border-box;
+}
+body {
+margin: 0;
+}
+/* Clear floats after the columns */
+.row:after {
+content: "";
+display: table;
+clear: both;
+}
+.row-fileNav:after {
+content: "";
+display: table;
+clear: both;
+padding-left: 5%;
+}
+/* Diseño de columnas */
+.column-1 {
+width: 100%;
+float: left;
+}
+.column-2 {
+width: 50%;
+float: left;
+}
+.column-3 {
+width: 33.33%;
+float: left;
+}
+.column-4 {
+width: 25%;
+float: left;
+}
+.column-5 {
+width: 20%;
+float: left;
+}
+.column-6 {
+width: 16.66%;
+float: left;
+}
+.column-fileNav {
+justify-content: center;
+width: 13.5%;
+height: 13%;
+float: left;
+margin-left: 1%;
+margin-right: 3%;
+}
+.column-fileNav .link-nav {
+position: fixed;
+width: 13.5%;
+height: 5%;
+}
+.column-fileNav p {
+color: black;
+font-family: 'Courier New', Courier, monospace;
+font-size: 150%;
+text-align: center;
+}
+.column-fileNav p:hover {
+cursor: pointer;
+}
+.column-fileNav button {
+margin-top: 5%;
+width: 100%;
+height: 600%;
+background: transparent;
+border: none;
+color: transparent;
+}
+.column-fileNav button:hover {
+cursor: pointer;
+}
+#inicio {
+background-image: url("../img/inicio.png");
+background-size: cover;
+background-repeat: no-repeat;
+margin: 0%;
+height: 100vh;
+}
+#inicio h1,
+#inicio h2 {
+margin-top: 0%;
+margin-bottom: 0%;
+color: white;
+}
+#inicio h1 {
+padding: 3%;
+}
+#inicio p {
+color: white;
+font-size: 150%;
+}
+#contents {
+padding-top: 4%;
+color: black;
+padding-right: 13%;
+width: 85%;
+height: 65%;
+}
+.padding-cpt {
+padding-left: 5%;
+}
+#folder {
+margin-left: 5%;
+margin-right: 5%;
+width: 95%;
+height: 100%;
+background-image: url("../img/fondo_carpetas/sospechosos_carpeta.png");
+background-repeat: no-repeat;
+background-size: 90%;
+}
+.flex {
+/*display no hace nada por si solo pero es necesario para lo siguiente*/
+display: flex;
+/*alinear en vertical*/
+align-items: center;
+/*alinear en horizontal*/
+justify-content: center;
+}
+a {
+text-decoration: none;
+color: white;
+}
+.row-fileNav {
+height: 9%;
+}
+/*------------------------SOSPECHOSOS--------------------*/
+#Maya_Fey{
+height:24vh;
+width:24%;
+background-image: url("./../img/sospechosos/maya_fey.jpeg");
+background-size: cover;
+background-position: center;
+float: left;
+position: relative;
+margin: 1%;
+}
+#Larry_Butz{
+height:24vh;
+width:24%;
+background-image: url("./../img/sospechosos/larry_butz.jpeg");
+background-size: cover;
+background-position: center;
+float: left;
+position: relative;
+margin: 1%;
+}
+.usr{
+position: absolute;
+bottom: 0;
+left: 0;
+width: 100%;
+height: 10%;
+background-color: rgba(223, 213, 213, 0.63);
+padding-left: 20%;
+}
+#Lana_Skye{
+height:24vh;
+width:24%;
+background-image: url("./../img/sospechosos/lana_skye.jpeg");
+background-size: cover;
+background-position: center;
+float: left;
+position: relative;
+margin: 1%;
+}
+#Matt_Engarde{
+height:24vh;
+width:24%;
+background-image: url("./../img/sospechosos/matt_engarde.jpeg");
+background-size: cover;
+background-position: center;
+float: left;
+position: relative;
+margin: 1%;
+}
+#Klavier_Gavin{
+height:24vh;
+width:24%;
+background-image: url("./../img/sospechosos/klavier_gavin.jpeg");
+background-size: cover;
+background-position: center;
+float: left;
+position: relative;
+margin: 1%;
+}
+#William_Stone{
+height:24vh;
+width:24%;
+background-image: url("./../img/sospechosos/william_stone.jpeg");
+background-size: cover;
+background-position: center;
+float: left;
+position: relative;
+margin: 1%;
+}
+.buttom{
+float: left;
+position: relative;
+padding: 3%;
+color: white;
+background-color: red;
+}
+/*-------------------MARGEN DEL CONTENIDO DE LAS CARPETAS---------------------*/
+.rlln{
+padding-right: 13%;
+}
+
+/* Otras clases */
+@media only screen and (max-width: 1250px){
+/*reglas*/
+/* column-3 pasará de tener 33.33% a 100% */
+.column-3{
+    width: 100%;
+}
+/* column-4 pasará de tener 25% a 50% */
+.column-4{
+    width: 50%;
+}
+/*-------------------TAMAÑO DE LA FUENTE A ESCALA------------------ */
+html {
+    font-size: 10px;
+}
 p{
     font-size: 1rem;
 }
@@ -30,204 +279,18 @@ h5{
 h6{
     font-size: 1.05rem;
 }
-/**************************/
+/*-------------FIN TAMAÑO DE LA FUENTE A ESCALA---------------------- */
 
-/* clases predefinidas */
-* {
-    box-sizing: border-box;
-}
-body{
-    margin: 0;
-}
-
-/* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-.row-fileNav:after {
-    content: "";
-    display: table;
-    clear: both;
-    padding-left: 5%;
-}
-
-/* Diseño de columnas */
-.column-1{
-    width: 100%;
-    float: left;
-}
-
-.column-2{
-    width: 50%;
-    float: left;
-}
-
-.column-3{
-    width: 33.33%;
-    float: left;
-}
-
-.column-4{
-    width: 25%;
-    float: left;
-}
-
-.column-5{
-    width: 20%;
-    float: left;
-}
-
-.column-6{
-    width: 16.66%;
-    float: left;
-}
-
-.column-fileNav {
-    justify-content: center;
-    width: 13.5%;
-    height: 13%;
-    float: left;
-    margin-left: 1%;
-    margin-right: 3%;
-    .link-nav {
-        position: fixed;
-        width: 13.5%;
-        height: 5%;
-    }
-    p {
-        color: black;
-        font-family: 'Courier New', Courier, monospace;
-        font-size: 150%;
-        text-align: center;
-    }
-
-    p:hover {
-        cursor: pointer;
-    }
-    button {
-        margin-top: 5%;
-        width: 100%;
-        height: 600%;
-        background: transparent; 
-        border: none; 
-        color: transparent;
-    }
-    button:hover {
-        cursor: pointer;
-    }
-}
-
-#inicio{
-    background-image:url("./../img/inicio.png");
+/*------------------------SOSPECHOSOS IMAGENES------------------------*/
+#img-1{
+    height: 50vh;
+    background-image: url("./../img/sospechosos/sospechoso-1.jpeg");
     background-size: cover;
-    background-repeat: no-repeat;
-    margin: 0%;
-    height: 100vh;
-    h1, h2 {
-        margin-top: 0%;
-        margin-bottom: 0%;
-        color: white;
-    }
-    h1 {
-        padding: 3%;
-    }
-    p {
-        color: white;
-        font-size: 150%;
-    }
+    background-position: center;
 }
 
-#contents {
-    padding-top: 4%;
-    color: black;
-}
 
-// #carpeta-sospechosos {
-//     position: fixed;
-//     width: 100%;
-// }
 
-.padding-cpt {
-    padding-left: 5%;
-}
-
-#folder {
-    margin-left: 5%;
-    margin-right: 5%;
-    width: 95%;
-    height: 100%;
-    background-image: url("../img/fondo_carpetas/sospechosos_carpeta.png");
-    background-repeat: no-repeat;
-    background-size: 90%;
-}
-
-.flex {
-    /*display no hace nada por si solo pero es necesario para lo siguiente*/
-    display: flex;
-    /*alinear en vertical*/
-    align-items: center;
-    /*alinear en horizontal*/
-    justify-content: center;
-}
-
-a {
-    text-decoration: none;
-    color: white;
-}
-
-.row-fileNav {
-    height: 9%;
-}
-
-/* Otras clases */
-@media only screen and (max-width: 1250px){
-    /*reglas*/
-    /* column-3 pasará de tener 33.33% a 100% */
-    .column-3{
-        width: 100%;
-    }
-    /* column-4 pasará de tener 25% a 50% */
-    .column-4{
-        width: 50%;
-    }
-    /*-------------------TAMAÑO DE LA FUENTE A ESCALA------------------ */
-    html {
-        font-size: 10px;
-    }
-    p{
-        font-size: 1rem;
-    }
-    
-    h1{
-        font-size: 3rem;
-    }
-    
-    h2{
-        font-size: 2rem;
-    }
-    
-    h3{
-        font-size: 1.6rem;
-    }
-    
-    h4{
-        font-size: 1.3rem;
-    }
-    
-    h5{
-        font-size: 1.15rem;
-    }
-    
-    h6{
-        font-size: 1.05rem;
-    }
-    /*-------------FIN TAMAÑO DE LA FUENTE A ESCALA---------------------- */
-    .padding-cpt {
-        padding-left:3%;
-    }
     @media only screen and (max-width: 900px) {
         /*reglas*/
             /* column-3 pasará de tener 33.33% a 100% */
