--- a/css/styles.css
+++ b/css/styles.css
@@ -122,9 +122,9 @@ body {
   font-size: 150%;
 }
 #contents {
-  padding-top: 4%;
+  padding-top: 3%;
   color: black;
-  padding-right: 13%;
+  padding-right: 0%;
   width: 85%;
   height: 65%;
 }
@@ -156,26 +156,6 @@ a {
   height: 9%;
 }
 /*------------------------SOSPECHOSOS--------------------*/
-#Maya_Fey {
-  height: 24vh;
-  width: 24%;
-  background-image: url("../img/sospechosos/maya_fey.jpeg");
-  background-size: cover;
-  background-position: center;
-  float: left;
-  position: relative;
-  margin: 1%;
-}
-#Larry_Butz {
-  height: 24vh;
-  width: 24%;
-  background-image: url("../img/sospechosos/larry_butz.jpeg");
-  background-size: cover;
-  background-position: center;
-  float: left;
-  position: relative;
-  margin: 1%;
-}
 .usr {
   position: absolute;
   bottom: 0;
@@ -185,8 +165,28 @@ a {
   background-color: rgba(223, 213, 213, 0.63);
   padding-left: 20%;
 }
+#Maya_Fey {
+  height: 30vh;
+  width: 24%;
+  background-image: url("../img/sospechosos/maya_fey.jpeg");
+  background-size: cover;
+  background-position: center;
+  float: left;
+  position: relative;
+  margin: 1%;
+}
+#Larry_Butz {
+  height: 30vh;
+  width: 24%;
+  background-image: url("../img/sospechosos/larry_butz.jpeg");
+  background-size: cover;
+  background-position: center;
+  float: left;
+  position: relative;
+  margin: 1%;
+}
 #Lana_Skye {
-  height: 24vh;
+  height: 30vh;
   width: 24%;
   background-image: url("../img/sospechosos/lana_skye.jpeg");
   background-size: cover;
@@ -196,7 +196,7 @@ a {
   margin: 1%;
 }
 #Matt_Engarde {
-  height: 24vh;
+  height: 30vh;
   width: 24%;
   background-image: url("../img/sospechosos/matt_engarde.jpeg");
   background-size: cover;
@@ -206,7 +206,7 @@ a {
   margin: 1%;
 }
 #Klavier_Gavin {
-  height: 24vh;
+  height: 30vh;
   width: 24%;
   background-image: url("../img/sospechosos/klavier_gavin.jpeg");
   background-size: cover;
@@ -216,7 +216,7 @@ a {
   margin: 1%;
 }
 #William_Stone {
-  height: 24vh;
+  height: 30vh;
   width: 24%;
   background-image: url("../img/sospechosos/william_stone.jpeg");
   background-size: cover;
@@ -231,6 +231,7 @@ a {
   padding: 3%;
   color: white;
   background-color: red;
+  font-size: 200%;
 }
 /*-------------------MARGEN DEL CONTENIDO DE LAS CARPETAS---------------------*/
 .rlln {
@@ -239,8 +240,8 @@ a {
 #testimonios {
   margin-left: 0%;
   margin-right: 0%;
-  width: 115%;
-  height: 115%;
+  width: 100%;
+  height: 100%;
   background-image: url("../img/testimonios/testimonios.png");
   background-repeat: no-repeat;
   background-size: 100%;
@@ -255,6 +256,39 @@ a {
   background-size: 100%;
   overflow-y: hidden;
   position: fixed;
+}
+#pruebas-escena {
+  margin-left: 0%;
+  margin-right: 0%;
+  width: 75%;
+  height: 75%;
+  background-image: url("../img/escena/pruebas-escena.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  overflow-y: hidden;
+  position: fixed;
+}
+#fondo-papel {
+  background-image: url("../img/pruebas_adicionales/pruebas-adicionales.png");
+  margin-left: 20%;
+  margin-right: 20%;
+  margin-top: 4%;
+  width: 60%;
+  height: 1200%;
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+.scrollable {
+  overflow-y: scroll;
+}
+#pruebas-cont p {
+  color: black;
+}
+#pruebas-cont a {
+  color: rgba(79, 79, 248, 0.993);
+}
+#pruebas-cont a:hover {
+  text-decoration: underline;
 }
 /* Otras clases */
 @media only screen and (max-width: 1250px) {
