--- a/css/styles.less
+++ b/css/styles.less
@@ -122,9 +122,9 @@ color: white;
 font-size: 150%;
 }
 #contents {
-padding-top: 4%;
+padding-top: 3%;
 color: black;
-padding-right: 13%;
+padding-right: /*13%*/0%;
 width: 85%;
 height: 65%;
 }
@@ -156,8 +156,17 @@ color: white;
 height: 9%;
 }
 /*------------------------SOSPECHOSOS--------------------*/
+.usr{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 10%;
+    background-color: rgba(223, 213, 213, 0.63);
+    padding-left: 20%;
+    }
 #Maya_Fey{
-height:24vh;
+height:30vh;
 width:24%;
 background-image: url("./../img/sospechosos/maya_fey.jpeg");
 background-size: cover;
@@ -167,7 +176,7 @@ position: relative;
 margin: 1%;
 }
 #Larry_Butz{
-height:24vh;
+height:30vh;
 width:24%;
 background-image: url("./../img/sospechosos/larry_butz.jpeg");
 background-size: cover;
@@ -176,17 +185,8 @@ float: left;
 position: relative;
 margin: 1%;
 }
-.usr{
-position: absolute;
-bottom: 0;
-left: 0;
-width: 100%;
-height: 10%;
-background-color: rgba(223, 213, 213, 0.63);
-padding-left: 20%;
-}
 #Lana_Skye{
-height:24vh;
+height: 30vh;
 width:24%;
 background-image: url("./../img/sospechosos/lana_skye.jpeg");
 background-size: cover;
@@ -196,7 +196,7 @@ position: relative;
 margin: 1%;
 }
 #Matt_Engarde{
-height:24vh;
+height:30vh;
 width:24%;
 background-image: url("./../img/sospechosos/matt_engarde.jpeg");
 background-size: cover;
@@ -206,7 +206,7 @@ position: relative;
 margin: 1%;
 }
 #Klavier_Gavin{
-height:24vh;
+height:30vh;
 width:24%;
 background-image: url("./../img/sospechosos/klavier_gavin.jpeg");
 background-size: cover;
@@ -216,7 +216,7 @@ position: relative;
 margin: 1%;
 }
 #William_Stone{
-height:24vh;
+height:30vh;
 width:24%;
 background-image: url("./../img/sospechosos/william_stone.jpeg");
 background-size: cover;
@@ -231,7 +231,9 @@ position: relative;
 padding: 3%;
 color: white;
 background-color: red;
+font-size: 200%;
 }
+
 /*-------------------MARGEN DEL CONTENIDO DE LAS CARPETAS---------------------*/
 .rlln{
 padding-right: 13%;
@@ -241,8 +243,8 @@ padding-right: 13%;
 #testimonios {
     margin-left: 0%;
     margin-right: 0%;
-    width: 115%;
-    height: 115%;
+    width: 100%;
+    height: 100%;
     background-image: url("../img/testimonios/testimonios.png");
     background-repeat: no-repeat;
     background-size: 100%;
@@ -260,7 +262,44 @@ padding-right: 13%;
     position: fixed;
 }
 
+#pruebas-escena {
+    margin-left: 0%;
+    margin-right: 0%;
+    width: 75%;
+    height: 75%;
+    background-image: url("../img/escena/pruebas-escena.png");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    overflow-y: hidden;
+    position: fixed;
+}
 
+#fondo-papel {
+    background-image: url("../img/pruebas_adicionales/pruebas-adicionales.png");
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-top: 4%;
+    width: 60%;
+    height: 1200%;
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+.scrollable {
+    overflow-y: scroll;
+}
+
+#pruebas-cont {
+    p {
+        color: black;
+    }
+    a {
+        color: rgba(79, 79, 248, 0.993);
+    }
+    a:hover {
+        text-decoration: underline;
+    }
+}
 
 /* Otras clases */
 @media only screen and (max-width: 1250px){
